# text2api

./:  tox.ini  .coverage  .coveragerc  .gitignore  1.md  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt  test_spec.txt  tree.txt
examples/: generate_from_json.py  simple_todo.txt  todo_api.json  todo_api.txt
generators/: cli_gen.py
generators/templates/: cli.py.j2  fastapi_main.py.j2  flask_app.py.j2  grpc_proto.proto.j2  websocket_server.py.j2
src/text2api/: __init__.py  cli.py
src/text2api/generators/: __init__.py  base_generator.py  cli_gen.py  client_generator.py  factory.py  fastapi_generator.py  openapi_generator.py
src/text2api/nlp/: spec_extractor.py
test_output/app/models/: __init__.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_core.py  test_generator.py  test_generators.py  test_ollama_client.py
tests/fixtures/: sample_texts.py
tests/functional/: test_cli.py
tests/integration/: __init__.py  test_end_to_end.py  test_fastapi_workflow.py
tests/unit/: test_cli.py  test_cli_gen.py
text2api/: __init__.py  cli.py
text2api/core/: __init__.py  analyzer.py  generator.py  mcp_integration.py  protocols.py
text2api/examples/: __init__.py  sample_descriptions.py
text2api/generators/: __init__.py  cli_gen.py  fastapi_gen.py  flask_gen.py  graphql_gen.py  grpc_gen.py  websocket_gen.py
text2api/llm/: __init__.py  language_detector.py  ollama_client.py  prompts.py
text2api/utils/: __init__.py  docker_utils.py  file_utils.py  validation.py
(+14 files in other folders)
