[tool.poetry]
name = "text2api"
version = "0.1.2"
description = "Automatyczne generowanie API na podstawie opisu tekstowego z wykorzystaniem NLP i Ollama"
authors = ["Tom Sapletta <info@softreck.dev>"]
readme = "README.md"
packages = [{include = "text2api"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.0"
pydantic = "^2.5.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pytest = "^7.4.0"
jinja2 = "^3.1.2"
ollama = "^0.3.0"
asyncio = "^3.4.3"
httpx = "^0.27.0"
click = "^8.1.7"
rich = "^13.7.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
mcp = "^1.0.0"
langdetect = "^1.0.9"
pyyaml = "^6.0.1"
docker = "^6.1.3"
flask = "^3.0.0"
flask-restx = "^1.3.0"
starlette = "^0.38.0"
graphene = "^3.3.0"
websockets = "^12.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
text2api = "text2api.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"